Don't use QFont::exactMatch() for fonts comparison

This function can return false even if the font found. Compare fonts by
QFontInfo::family() instead.

Change-Id: I519dd11ef7cba7395ca5b815d3973ddf585c439a
Task-number: QTBUG-53377
Reviewed-by: J-P Nurmi <jpnurmi@qt.io>